--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "NodeJs assignment for 10x Academy",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "jest",
     "test:file": "jest  --runInBand -t"
   },
@@ -13,7 +15,9 @@
   "author": "Yashendra Goyal",
   "license": "ISC",
   "dependencies": {
+    "cowsay": "^1.5.0",
     "ejs": "^3.1.6",
+    "express": "^4.17.3",
     "faker": "^5.5.3",
     "jest": "^27.4.5",
     "supertest": "^6.1.6"
